bootstrap/monitoring/kube-prometheus-stack/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: grafana-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:ncv/EIj3j8h69OqxLW1fuTbj+dAy9mGORrdg5a/jH2QIXFTcnQ==,iv:B8q+X6vElUyf5OMR66Le6T5pQY2uuUFI/6O48u1BOwk=,tag:GFjJWkAKOrEQtjE3OUVOhw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:NbYRSrCxFUH02nHtQf/+/7EyO/H5MscSmvDCZMd+8lEaGh1f8A==,iv:dRXqEKRG6lltghsf8/6XDV6kkq+pU7Ytj0oJrRNv/mg=,tag:l6SzXbJFJRmx3NAu4oDrgw==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSTQvWjBscDlRT3h2M2lI
[...]
            ezGuaiY71dlw42VelU9dHKL3rSbBqKB385h0+IVg+KvhHZU18qFp0w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-20T13:15:12Z"
    mac: ENC[AES256_GCM,data:1Dxox6suG4td3rOQ4Xix4MTfSWjNIHSRnjfOSqxsaxGtvBPtjk/OPT/CsjMVNi3WDSfftqd1JgygktqQnnua6geagsMnSAzmJR13QvnMTvIUXuhgrUIIVW7cQ4z8TbOt8NaY+qMQSl0xgbjC1/z3xoTR4v1+9kZWCpWlPqqVEaM=,iv:s/0pQnZBRxMev4h8V59w2Qip5D9GlophlvIRhFXN66M=,tag:AbDDMIX7m7ypYsn8d0j7CA==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:12Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAh+MWVRxkkt+2fuW/nnJhfvfG6bt+aGqMNOU0FIunCOt4
[...]
            =Hnf9
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
---
apiVersion: v1
kind: Service
metadata:
    name: prometheus-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:bVcibjtcfs9GUe4Ym0O9raM1ZwGh2I544HA3/ovB9gPl3l3LjJfj6A==,iv:9wZqAFOX7yuZ11y0E8HC6CgISEWaKPbNLVcm/dFlowU=,tag:f2Uu+hGSlA65ucuBWhmRlg==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:/kKRy/c/GCLgxpe9X6L/YZ7MB92rMv/bfX6J/vUuWHd6AaANG4bIWw==,iv:Q050Xa0S9yMLlALupG1C1NGcDOSSEpxk/AzAsVkUbRQ=,tag:+UwVWGLUx1Uya9uaBQoGZA==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSTQvWjBscDlRT3h2M2lI
[...]
            ezGuaiY71dlw42VelU9dHKL3rSbBqKB385h0+IVg+KvhHZU18qFp0w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-20T13:15:12Z"
    mac: ENC[AES256_GCM,data:1Dxox6suG4td3rOQ4Xix4MTfSWjNIHSRnjfOSqxsaxGtvBPtjk/OPT/CsjMVNi3WDSfftqd1JgygktqQnnua6geagsMnSAzmJR13QvnMTvIUXuhgrUIIVW7cQ4z8TbOt8NaY+qMQSl0xgbjC1/z3xoTR4v1+9kZWCpWlPqqVEaM=,iv:s/0pQnZBRxMev4h8V59w2Qip5D9GlophlvIRhFXN66M=,tag:AbDDMIX7m7ypYsn8d0j7CA==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:12Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAh+MWVRxkkt+2fuW/nnJhfvfG6bt+aGqMNOU0FIunCOt4
[...]
            =Hnf9
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
---
apiVersion: v1
kind: Service
metadata:
    name: alertmanager-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:8zS7hJW9Df+zwe9M9JjU3dQWpLAbh4ZLkpOv1lIJQIAFVB33OjykhX9t,iv:1IsBCHJM1h0MuXPRirc93B2S7/YgiUVQFF/0cOYuXJ0=,tag:0qOampMVBAQ9ACT9oDoDTw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:VnaXKw9dUwYeIxx2o5oSazXPnLr+WMT5lM1ppH9FHwEhgJXppNK7Yoqv,iv:olkIxF4vJNtUsd8dr5V+m0F2hFoaogvZ0WlImtHt8I4=,tag:Et/7Ms8mWQmC744fCWVL6A==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSTQvWjBscDlRT3h2M2lI
[...]
            ezGuaiY71dlw42VelU9dHKL3rSbBqKB385h0+IVg+KvhHZU18qFp0w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-20T13:15:12Z"
    mac: ENC[AES256_GCM,data:1Dxox6suG4td3rOQ4Xix4MTfSWjNIHSRnjfOSqxsaxGtvBPtjk/OPT/CsjMVNi3WDSfftqd1JgygktqQnnua6geagsMnSAzmJR13QvnMTvIUXuhgrUIIVW7cQ4z8TbOt8NaY+qMQSl0xgbjC1/z3xoTR4v1+9kZWCpWlPqqVEaM=,iv:s/0pQnZBRxMev4h8V59w2Qip5D9GlophlvIRhFXN66M=,tag:AbDDMIX7m7ypYsn8d0j7CA==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:12Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAh+MWVRxkkt+2fuW/nnJhfvfG6bt+aGqMNOU0FIunCOt4
[...]
            =Hnf9
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
