bootstrap/monitoring/kube-prometheus-stack/resources/external-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.monitoring.anotherlife.org.pl
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  type: ExternalName
  externalName: grafana.monitoring.anotherlife.org.pl
  sessionAffinity: None
