bootstrap/monitoring/kube-prometheus-stack/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:FgP2pLhx1GGJlwICahXDHanDn7gr31loDJ6Gq1U=,iv:3ik6xgFFQ1FmHNpXIIOdu1kw8qL4c1HKHe49TR9uDis=,tag:wv7zNTHrCo78IzLoFzr0cg==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: grafana
    name: grafana
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:0KZHDyN+Imn8/CUc4Mj5edeT0USUqixkKuurzHoz5clFn2MAw9sWjnwtMmxW,iv:FFXApzFq4je9LIYYfJpEh0UdvAjc9J8G0XlEFNKoyQI=,tag:SjJ4UsUwWR72vtH8mZatPA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: grafana
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:Y8GvX+rUNUiIeMwyX5S0eQb+MoCIYrErY8KbzUU=,iv:p6+p9mkMX9u1RAP+RnqDl/cgjs2tO54l4HoLmomUmHA=,tag:/pAqGsAuOwpIvr5S6pNgxg==,type:str]
              sans:
                - ENC[AES256_GCM,data:C39SohhAJxKpYRPo8mlbSxFuN0TCFTpWmoA2qhJl,iv:2YQIijLvo9ZxNphar0WhK0ITIDjUNgFgMdkaREMleb4=,tag:ZfdFeDlmshSJNtyZ0P49mA==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: grafana-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByQjFVSDBuM3VvdzZtbWZQ
[...]
            Dj602MJB1MakaWTnNzMoaEKtH9ATDif7cQ8cSERPqklrsN+Vxjiapg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-20T13:15:19Z"
    mac: ENC[AES256_GCM,data:oLJcXH07E5gDc7Tnb+qBposN/DNmEHnfpnQF7GcJIAnxQiOBwT7s/JNRhtLM8q+NyZEfNVQLaB6FHi4MIiZbRXoGRwsjHi/60Cs4A34fPpUU4Yf9nLJpFeIGV2Nu2kngM+2xeEXIYOKw7G/OJbxTLx3eB4yLBmqMUiIJ+5i4cME=,iv:pnpmJOT338EUKB30beVTsR3ovchuYk+itgTCisrLl1M=,tag:FKwpJS+j/W9tDPJ4+pO5Pg==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:19Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//cQMPtFSrqo9nLImp++VDQeVn2CtAHZ0kNrwCQs9Hhzbp
[...]
            =3d8p
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:0FMqaZOW6iJrwL0UMd24o37AQV3todNolhWS0SM=,iv:7GBA1qscrzBwj/oQINKKXBZcqoStjQa+Qp6wzYnHBnE=,tag:OdS9UiFUeRjnVbZS4X1vUA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: prometheus
    name: prometheus
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:99WmlACXPtnF3MiP+qd10ahvXazltKEhb2AXSBDjf6xPOi0YZDtBm+ckaS5J5dym,iv:fs43ollInFhNygwXpmVRq3ibFOzwPjF7GtZFwEWc394=,tag:LfkIBd9Ui8Ei7RtDtIPlUg==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: prometheus
              port: 9090
    tls:
        domains:
            - main: ENC[AES256_GCM,data:CLWE6Fj7qBOlyS4VsVvXT2x3rZ6Qrjh+qAoFsqk=,iv:GZso8hSWXgGLXN2lnQNUJLwCXyU9bLf154YUobCkpks=,tag:3dtW16HQfpjkp3WhMPPIrQ==,type:str]
              sans:
                - ENC[AES256_GCM,data:B/A69e4ro4X/Vt9Ue4lG2JTQV7rHLyJqqgl3VrO7,iv:5Ssrr1K3eqha9W00ndbQWVYCsysk5yqfCf5Rt20NZ3A=,tag:Tl2kOgMyciisnSSfCagIjQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: prometheus-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByQjFVSDBuM3VvdzZtbWZQ
[...]
            Dj602MJB1MakaWTnNzMoaEKtH9ATDif7cQ8cSERPqklrsN+Vxjiapg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-20T13:15:19Z"
    mac: ENC[AES256_GCM,data:oLJcXH07E5gDc7Tnb+qBposN/DNmEHnfpnQF7GcJIAnxQiOBwT7s/JNRhtLM8q+NyZEfNVQLaB6FHi4MIiZbRXoGRwsjHi/60Cs4A34fPpUU4Yf9nLJpFeIGV2Nu2kngM+2xeEXIYOKw7G/OJbxTLx3eB4yLBmqMUiIJ+5i4cME=,iv:pnpmJOT338EUKB30beVTsR3ovchuYk+itgTCisrLl1M=,tag:FKwpJS+j/W9tDPJ4+pO5Pg==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:19Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//cQMPtFSrqo9nLImp++VDQeVn2CtAHZ0kNrwCQs9Hhzbp
[...]
            =3d8p
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:mHJXbP4TH2aWlfIoD8m6K8v1qRmmVlYPKjZ5Jv8=,iv:jRFG+s885k3Tede7uS+MNKwnzAarnLg2UC6gIKKjglQ=,tag:1UaGGdmw2FUrQ2npo2u2lw==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: alertmanager
    name: alertmanager
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:oorjnVRgQKoAD0iFY9lLRUnldhSJT42841klggVyyNgz/9F0iaZaL1eXJ08BxN8emTI=,iv:Sd7vK6gDbnH08YsqnaxlOS5zoBhgLtGuwFwP5BlILj8=,tag:V2+oYPWoRYdfyI5oyiIwzA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: alertmanager
              port: 9093
    tls:
        domains:
            - main: ENC[AES256_GCM,data:phe5b90UlY/rs5CU+dLB093oGsEOG7taWKM9sms=,iv:Pofqu6mGLvtL0jkY3LLDvxHmiYJHmN74DGN/8LLxV8c=,tag:aFUyueATTdsxkTDuor6R0w==,type:str]
              sans:
                - ENC[AES256_GCM,data:M4I4m2RE+MXVj142uQU/J5dyaUSxtWcqdtyuBx+z,iv:tU7tJCZMuPNpDZ1sOFI48eAdalbmRaei+EbyS0KTwAM=,tag:qlQrd6PbJA1A/6qjALRVAQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: alertmanager-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByQjFVSDBuM3VvdzZtbWZQ
[...]
            Dj602MJB1MakaWTnNzMoaEKtH9ATDif7cQ8cSERPqklrsN+Vxjiapg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-20T13:15:19Z"
    mac: ENC[AES256_GCM,data:oLJcXH07E5gDc7Tnb+qBposN/DNmEHnfpnQF7GcJIAnxQiOBwT7s/JNRhtLM8q+NyZEfNVQLaB6FHi4MIiZbRXoGRwsjHi/60Cs4A34fPpUU4Yf9nLJpFeIGV2Nu2kngM+2xeEXIYOKw7G/OJbxTLx3eB4yLBmqMUiIJ+5i4cME=,iv:pnpmJOT338EUKB30beVTsR3ovchuYk+itgTCisrLl1M=,tag:FKwpJS+j/W9tDPJ4+pO5Pg==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:19Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//cQMPtFSrqo9nLImp++VDQeVn2CtAHZ0kNrwCQs9Hhzbp
[...]
            =3d8p
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
