bootstrap/monitoring/kube-prometheus-stack/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:Z1nKVHjk4P5VGFqHmQpRb0g5+8TOOzILzBpO4/M=,iv:YnuIkjJ25VaV2oC8p7W7waZ+6JvUYmAy07bNHvQXJdE=,tag:4KjZYXdL3S0dxrEvXycKtg==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: grafana
    name: grafana
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:H+vvxZix9OUIqSekPtn//wBPksKe4Z5m7nLsMgo6wNhIbeSnGCIX5Cb+pRbZ,iv:MILSdGyMy/s5j2GNSqbyau6bGdB4M2TF7MDMgU0nvAE=,tag:XplheR7QfFOJptO8YuGSsQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: grafana
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:CH06026mojrm5VgQzPJ+xpP/3Htmm0qbgpUMj6o=,iv:nYtXyI+WCp/yNM7FA2pThm6uqzAs9phd/N5ziS9pkhk=,tag:DCTbfLG8eqoblT6CQOM6Rg==,type:str]
              sans:
                - ENC[AES256_GCM,data:H5X5T4ZFFfs62EMOb9z2bNA5bR0mAZPBug1vKiWV,iv:J3y4khpn3ZCW92EWJ5OauQjk84RciFbEBZBFfvb3KPw=,tag:g/V1eLHCf1BIMA86C69ALQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: grafana-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUM1F5bmNMbGZiK2Z6dGFx
[...]
            M828eB9RVndy2zKS+F8iN+3YGs0579oiVrBzPVbcvwKOvP9UW5/bBA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-21T23:09:24Z"
    mac: ENC[AES256_GCM,data:gw7hzaR0yhgDWJisto/6inWh3GgO7JfrFQhCN6wyMmbfVg7cNX3vfaOivXlqPD2fpuDbI6N+/oCzDEQLj1p9uIo69kdKGFB/UHs81sgFU4Un1JoSsZB/mWPNmRd9Uyzc+si1zOGFCRJOLNr4m2UuzL505iDwifl/iE/FjJMfTwc=,iv:Sk23mMyvKhIikXOu+ykVzJfSEfjUSv5V5dVLH1GO668=,tag:RqenDEgJ9CDofLLD8P4W/w==,type:str]
    pgp:
        - created_at: "2024-06-21T23:09:24Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+M0iTf+d860xzi1/nroqopf38pWJys8A4b1iXJLtdsiEb
[...]
            =kxLu
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:ipdACpgEoWH8L1zr76LJKKaeUg4w34X9m2LlW2Q=,iv:xEn3VMk95yvZradsV60DubqVOfR8Bf1+j84KdhFEqUs=,tag:PLiEeigUbSE+lY+yka391A==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: prometheus
    name: prometheus
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:gUjrI92BvOwbrnMG+8gcObx5pHR193hCcFmhFJ5iWTxsQEIxuNxW32TeFlwJr0Vl,iv:gmqldnajB6N5MHHtl0dZx8+mVIBjMlo7YRimfaW/Ot8=,tag:ujTDxlEez2l0F//iyZWoFw==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: prometheus
              port: 9090
    tls:
        domains:
            - main: ENC[AES256_GCM,data:2ap64vlEOtufB1LLwOdwFDrCXOGEPzE14okEAXM=,iv:fIZ/2P1vQfZX50K92iTMa8vw7cvjOYTs0Sp0mVjVZiU=,tag:6ZmjyUB8X8owEj/nQY6x/w==,type:str]
              sans:
                - ENC[AES256_GCM,data:Zwwkugv9PNAGf7t/JFjP9GAnWf1dA0AX9K35Jsje,iv:HBH9XZFkmNpGoDqlL+s6vN8ah+MVFXUcvE1iyAZZphE=,tag:+R5fO2VDiajAjnG3a4JYyg==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: prometheus-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUM1F5bmNMbGZiK2Z6dGFx
[...]
            M828eB9RVndy2zKS+F8iN+3YGs0579oiVrBzPVbcvwKOvP9UW5/bBA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-21T23:09:24Z"
    mac: ENC[AES256_GCM,data:gw7hzaR0yhgDWJisto/6inWh3GgO7JfrFQhCN6wyMmbfVg7cNX3vfaOivXlqPD2fpuDbI6N+/oCzDEQLj1p9uIo69kdKGFB/UHs81sgFU4Un1JoSsZB/mWPNmRd9Uyzc+si1zOGFCRJOLNr4m2UuzL505iDwifl/iE/FjJMfTwc=,iv:Sk23mMyvKhIikXOu+ykVzJfSEfjUSv5V5dVLH1GO668=,tag:RqenDEgJ9CDofLLD8P4W/w==,type:str]
    pgp:
        - created_at: "2024-06-21T23:09:24Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+M0iTf+d860xzi1/nroqopf38pWJys8A4b1iXJLtdsiEb
[...]
            =kxLu
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "5"
        cert-manager.io/cluster-issuer: route53-letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:qSqFYmfpouGIrQT5OLUZyThsrjz60FytA8GeahA=,iv:GpJR5wegNL8irywMtMQ2bzyMP8SLGdRXrTitKuUnviQ=,tag:uFO/bdtHuGkQWeDfkQXuzA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: alertmanager
    name: alertmanager
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:PKLmFkgAHGMphsukOl8Eo1BFhb7TZ1grcRiy09/SzjWi4J8qmXkx/UYV/bWbeoFDWdM=,iv:VyzD5Xla497FBGeIkVp7uBPLBNNV+aS8bgerzgsBcro=,tag:1+5Ny8xbm+FviHxcUWtcSg==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: alertmanager
              port: 9093
    tls:
        domains:
            - main: ENC[AES256_GCM,data:Z6Pgv8TjyuOXPoq61EVSfQGL2/w+ktfRtzQNDMQ=,iv:ffpXoFXL9IvPJiTRmMf2fW2Zp1qtjAf0RE7E5mdj5mk=,tag:WpHIsOxePTKkOOTxuplBfA==,type:str]
              sans:
                - ENC[AES256_GCM,data:/S408kGNxmpCjYJoZyY5RlbPvuNkEJW6D7kU04JM,iv:QDM22+63ibK2lLg9CFXtltbC2rUskGP+OLavKIPEa9o=,tag:Qakcz3wHebx4GL7kAm+7ow==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: alertmanager-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUM1F5bmNMbGZiK2Z6dGFx
[...]
            M828eB9RVndy2zKS+F8iN+3YGs0579oiVrBzPVbcvwKOvP9UW5/bBA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-06-21T23:09:24Z"
    mac: ENC[AES256_GCM,data:gw7hzaR0yhgDWJisto/6inWh3GgO7JfrFQhCN6wyMmbfVg7cNX3vfaOivXlqPD2fpuDbI6N+/oCzDEQLj1p9uIo69kdKGFB/UHs81sgFU4Un1JoSsZB/mWPNmRd9Uyzc+si1zOGFCRJOLNr4m2UuzL505iDwifl/iE/FjJMfTwc=,iv:Sk23mMyvKhIikXOu+ykVzJfSEfjUSv5V5dVLH1GO668=,tag:RqenDEgJ9CDofLLD8P4W/w==,type:str]
    pgp:
        - created_at: "2024-06-21T23:09:24Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+M0iTf+d860xzi1/nroqopf38pWJys8A4b1iXJLtdsiEb
[...]
            =kxLu
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
