bootstrap/monitoring/kube-prometheus-stack/resources/ingressroute.staging.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-staging
    external-dns.alpha.kubernetes.io/target: monitoring.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: grafana
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`grafana.monitoring.anotherlife.org.pl`)
    middlewares:
    - name: chain-traefik-dashboard
      namespace: traefik
    services:
    - kind: TraefikService
      name: grafana
      port: 80
  tls:
    domains:
    - main: monitoring.anotherlife.org.pl
      sans:
      - .monitoring.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: grafana-cf-staging

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-staging
    external-dns.alpha.kubernetes.io/target: monitoring.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: prometheus
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`prometheus.monitoring.anotherlife.org.pl`)
    middlewares:
    - name: chain-traefik-dashboard
      namespace: traefik
    services:
    - kind: TraefikService
      name: prometheus
      port: 9090
  tls:
    domains:
    - main: monitoring.anotherlife.org.pl
      sans:
      - .monitoring.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: prometheus-cf-staging

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/compare-options: IgnoreExtraneous
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-staging
    external-dns.alpha.kubernetes.io/target: monitoring.anotherlife.org.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: alertmanager
  name: alertmanager
  namespace: monitoring
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`alertmanager.monitoring.anotherlife.org.pl`)
    middlewares:
    - name: chain-traefik-dashboard
      namespace: traefik
    services:
    - kind: TraefikService
      name: alertmanager
      port: 9093
  tls:
    domains:
    - main: monitoring.anotherlife.org.pl
      sans:
      - .monitoring.anotherlife.org.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: alertmanager-cf-staging
